@@ -7,3 +7,4 @@ extern bool arg_dump_core;
 extern int arg_crash_chvt;
 extern bool arg_crash_shell;
 extern bool arg_crash_reboot;
+extern bool arg_crash_exit;
